{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 18,
  "lineage": "47b7498a-8742-ef18-b173-b74b4c248dd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01df5b75acc0f83f7",
            "domain": "vpc",
            "id": "eipalloc-01df5b75acc0f83f7",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-214-238-143.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.238.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-eip"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b48565080da55df0",
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:instance/i-047c2ddaa05c6c8b6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:654654395042:key/73629220-ff92-45a5-9f31-db83bc96f636",
                "throughput": 0,
                "volume_id": "vol-0da8328ee70789409",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047c2ddaa05c6c8b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ztna_client-lab-windows-ap-southeast-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03849dce3aec19c34",
            "private_dns": "ip-172-30-2-111.ap-southeast-1.compute.internal",
            "private_ip": "172.30.2.111",
            "public_dns": "ec2-54-255-246-7.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.246.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:654654395042:key/73629220-ff92-45a5-9f31-db83bc96f636",
                "throughput": 0,
                "volume_id": "vol-0b314e3a1c7999aed",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0640ce10ccf39422f",
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-server"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065599e14c00080a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-2019",
            "data.template_file.windows-userdata",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:internet-gateway/igw-06ff18b5673935b72",
            "id": "igw-06ff18b5673935b72",
            "owner_id": "654654395042",
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-igw"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-igw"
            },
            "vpc_id": "vpc-052d77220ec8d533d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:route-table/rtb-00eaa1122de3949bb",
            "id": "rtb-00eaa1122de3949bb",
            "owner_id": "654654395042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ff18b5673935b72",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-public-subnet-rt"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-052d77220ec8d533d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bb7bc4cd44556d1",
            "route_table_id": "rtb-00eaa1122de3949bb",
            "subnet_id": "subnet-0640ce10ccf39422f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-windows-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:security-group/sg-065599e14c00080a6",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065599e14c00080a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming RDP connections",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ztna_client-Lab-windows-sg",
            "name_prefix": "",
            "owner_id": "654654395042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-Lab-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-052d77220ec8d533d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:subnet/subnet-0640ce10ccf39422f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0640ce10ccf39422f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654395042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-public-subnet"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-public-subnet"
            },
            "vpc_id": "vpc-052d77220ec8d533d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654395042:vpc/vpc-052d77220ec8d533d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0df6680955e50abc3",
            "default_route_table_id": "rtb-005694e9935dcb8c0",
            "default_security_group_id": "sg-0325312ce4f312b27",
            "dhcp_options_id": "dopt-08909ff7768169ca3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052d77220ec8d533d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005694e9935dcb8c0",
            "owner_id": "654654395042",
            "tags": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-vpc"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "ztna_client-lab-vpc"
            }
          }
        }
      ]
    }
  ]
}